@@ -4,7 +4,6 @@ package com.jhernandez.backend.bazaar.infrastructure.adapter.persistence.reposit
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -38,7 +37,8 @@ public class MysqlCategoryRepositoryAdapter implements CategoryRepositoryPort {
         log.info("Finding all categories {}");
         return categoryRepository.findAll().stream()
                 .map(categoryEntityMapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
+                // .collect(Collectors.toList());
     }
 
     @Transactional(readOnly = true)
@@ -47,7 +47,8 @@ public class MysqlCategoryRepositoryAdapter implements CategoryRepositoryPort {
         log.info("Finding all enabled categories {}");
         return categoryRepository.findAllEnabled().stream()
                 .map(categoryEntityMapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
+                // .collect(Collectors.toList());
     }
 
     @Transactional(readOnly = true)
